# xDiff

./: CMakeLists.txt  GenerateProjectFiles.bat  LICENSE  README.md  vcpkg.json
Source/: CMakeLists.txt  Pch.h  Utils.h  xDiff.cpp
