CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(xDiff)

SET(CMAKE_CXX_STANDARD 17)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Bin/${TARGET_PATH})

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

FIND_PACKAGE(
    crashpad CONFIG REQUIRED
)

FIND_PACKAGE(
    argh CONFIG REQUIRED
)

FIND_PACKAGE(
    Xlnt CONFIG REQUIRED
)

INCLUDE(Source/CMakeLists.txt)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/Source
)

ADD_EXECUTABLE(${PROJECT_NAME}
     ${SOURCE_FILES}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    PRIVATE crashpad::crashpad
    PRIVATE xlnt::xlnt
)

TARGET_PRECOMPILE_HEADERS(${PROJECT_NAME} PRIVATE
    ${PROJECT_SOURCE_DIR}/Source/Pch.h
)